--- a/video.html
+++ b/video.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <h1> Videos from Project 2: Projector Installation </h1>
-    <iframe width="420" height="345" src="https://www.youtube.com/watch?v=fqwAdQ-Euts"></iframe>
-    <iframe width="420" height="345" src="https://www.youtube.com/watch?v=HvfK7_sfByM"></iframe>
-    <iframe width="420" height="345" src="https://www.youtube.com/watch?v=xdIgou6F6VA"></iframe>
+    <iframe width="420" height="345" src="https://www.youtube.com/watch?v=fqwAdQ-Euts"> https://www.youtube.com/watch?v=fqwAdQ-Euts </iframe>
+    <iframe width="420" height="345" src="https://www.youtube.com/watch?v=HvfK7_sfByM"> https://www.youtube.com/watch?v=HvfK7_sfByM </iframe>
+    <iframe width="420" height="345" src="https://www.youtube.com/watch?v=xdIgou6F6VA"> https://www.youtube.com/watch?v=xdIgou6F6VA </iframe>
   </body>
   <footer>
     <div class="link">
